--- a/Problem_04/problem_04.ipynb
+++ b/Problem_04/problem_04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "7fa5f22b",
    "metadata": {},
    "outputs": [
@@ -16,11 +16,11 @@
       "2    Mohan   29      61000\n",
       "3   Ismail   28      60000\n",
       "4     Kory   42     150000\n",
-      "Cluster1 correct: 6, incorrect: 2, class: 2\n",
+      "Cluster1 correct: 7, incorrect: 0, class: 2\n",
       "****************************************\n",
-      "Cluster2 correct: 5, incorrect: 2, class: 0\n",
+      "Cluster2 correct: 5, incorrect: 1, class: 0\n",
       "****************************************\n",
-      "Cluster3 correct: 8, incorrect: 2, class: 0\n",
+      "Cluster3 correct: 8, incorrect: 1, class: 0\n",
       "****************************************\n"
      ]
     },
@@ -143,45 +143,19 @@
     "cluster3 = np.array(cluster3)\n",
     "\n",
     "# Correction function\n",
+    "from collections import Counter\n",
+    "\n",
     "def classify_correction(y):\n",
-    "    first = []\n",
-    "    second = []\n",
-    "    third = []\n",
-    "    first.append(0)\n",
-    "    second.append(1)\n",
-    "    index1 = 1\n",
-    "    index2 = 1\n",
-    "    index3 = 0\n",
-    "\n",
-    "    for i in range(1, len(y)):\n",
-    "        if y[i] == first[0]:\n",
-    "            index1 += 1\n",
-    "            first.append(y[i])\n",
-    "        elif y[i] == second[0]:\n",
-    "            index2 += 1\n",
-    "            second.append(y[i])\n",
-    "        else:\n",
-    "            index3 += 1\n",
-    "            third.append(y[i])\n",
-    "\n",
-    "    max1 = max(len(first), len(second))\n",
-    "    max2 = max(max1, len(third))\n",
-    "\n",
-    "    if max2 == len(first):\n",
-    "        corr = len(first)\n",
-    "        incorr = len(second) + len(third)\n",
-    "        cl = first[0]\n",
-    "    elif max2 == len(second):\n",
-    "        corr = len(second)\n",
-    "        incorr = len(first) + len(third)\n",
-    "        cl = second[0]\n",
-    "    else:\n",
-    "        corr = len(third)\n",
-    "        incorr = len(first) + len(second)\n",
-    "        cl = third[0]\n",
-    "\n",
+    "    # Count occurrences of each label\n",
+    "    counts = Counter(y)\n",
+    "    \n",
+    "    # Find the most common label and its count\n",
+    "    cl, corr = counts.most_common(1)[0]\n",
+    "    \n",
+    "    # Calculate incorrect count (total - correct)\n",
+    "    incorr = len(y) - corr\n",
+    "    \n",
     "    return corr, incorr, cl\n",
-    "\n",
     "# Show results\n",
     "corr, incorr, cl = classify_correction(classify1)\n",
     "print(f'Cluster1 correct: {corr}, incorrect: {incorr}, class: {cl}')\n",
@@ -217,8 +191,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ee3b1045",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3528599804.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    git status\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3193db08",
    "metadata": {},
    "outputs": [],
    "source": []
