--- a/Problem_07/lab_07.ipynb
+++ b/Problem_07/lab_07.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "04ee7f8e",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your 3x3 pattern row-wise (space separated 0 or 1):\n",
+      "Enter your 3x3 pattern row-wise (space separated 0 or 1):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Network Output (O): -1\n",
       "Pattern matched as: L\n"
@@ -55,6 +61,7 @@
     "        user_input.extend([int(x) for x in row])\n",
     "    return np.array(user_input)\n",
     "\n",
+    "\n",
     "def predict(X, threshold=1):\n",
     "    net_input = np.dot(W, X) + b\n",
     "    output = sign_with_threshold(net_input, threshold)\n",
@@ -83,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20d987e4",
+   "id": "e03b38b9",
    "metadata": {},
    "outputs": [],
    "source": []
