--- a/Problem_07/lab_07.ipynb
+++ b/Problem_07/lab_07.ipynb
@@ -10,13 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your 3x3 pattern row-wise (space separated 0 or 1):\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Enter your 3x3 pattern row-wise (space separated 0 or 1):\n",
       "\n",
       "Network Output (O): -1\n",
       "Pattern matched as: L\n"
@@ -35,7 +29,7 @@
     "    0, 1, 0,\n",
     "    0, 1, 0\n",
     "])\n",
-    "\n",
+    "  \n",
     "target_L = -1\n",
     "target_I = 1\n",
     "\n",
@@ -90,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e03b38b9",
+   "id": "55a803e9",
    "metadata": {},
    "outputs": [],
    "source": []
